prevent tempo from jumping

--- a/assets/css/_footer.styl
+++ b/assets/css/_footer.styl
@@ -46,6 +46,8 @@ footer
   .tempo
     blue-bg()
     cursor: ew-resize
+    width: 80px
+    box-sizing: border-box
 
     &:active
       cursor: ew-resize
